@startuml Home Screen – Class Diagram
title Home Screen · Class Diagram

skinparam defaultFontName Roboto
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFCFA

skinparam class {
  BackgroundColor #E8F5E9
  BorderColor     #2E7D32
  HeaderBackgroundColor #C8E6C9
}

' ───────────────────────────────────
'  Composable Screen
' ───────────────────────────────────

class HomeScreen <<@Composable>> {
  ' UI state
  - alarms : List<Alarm>
  - searchQuery : String
  - selectMode : Boolean
  - selectedIds : Set<Long>
  ' Actions
  + onSearchQueryChange(q: String)
  + onAlarmTap(id: Long)
  + onAlarmLongPress(id: Long)
  + onToggleEnabled(id: Long, on: Boolean)
  + onFabCreateClick()
  + onAISparkleClick()
  + onSelectToggle(id: Long)
  + onBulkEnable()
  + onBulkDisable()
  + onBulkDelete()
  + onExitSelectMode()
}

' ───────────────────────────────────
'  ViewModel
' ───────────────────────────────────

class AlarmListViewModel {
  - repo : IAlarmRepository
  --
  + alarms : StateFlow<List<Alarm>>
  + searchQuery : StateFlow<String>
  --
  + search(query: String)
  + setEnabled(ids: List<Long>, on: Boolean)
  + delete(ids: List<Long>)
}

' ───────────────────────────────────
'  Interface (external)
' ───────────────────────────────────

interface IAlarmRepository <<interface>> {
  + getAll(): Flow<List<Alarm>>
  + search(q: String): Flow<List<Alarm>>
  + setEnabled(ids: List<Long>, on: Boolean)
  + delete(ids: List<Long>)
}

' ───────────────────────────────────
'  Model (shared)
' ───────────────────────────────────

class Alarm <<data class>> {
  + id : Long
  + title : String
  + rootCondition : Condition
  + readout : Boolean
  + ring : Boolean
  + triggerOnce : Boolean
  + enabled : Boolean
}

' ───────────────────────────────────
'  Condition Hierarchy (Composite Pattern)
' ───────────────────────────────────

abstract class Condition <<sealed>>

class LeafCondition <<data class>> {
  + category : String
  + type : String
  + label : String
  + value : Any?
}

class CompositeCondition <<data class>> {
  + operator : Operator
  + children : List<Condition>
}

enum Operator {
  AND
  OR
}

' ───────────────────────────────────
'  Relationships
' ───────────────────────────────────

HomeScreen --> AlarmListViewModel : observes StateFlow
AlarmListViewModel --> IAlarmRepository : delegates
AlarmListViewModel ..> Alarm : exposes
Alarm *-- Condition : rootCondition
Condition <|-- LeafCondition
Condition <|-- CompositeCondition
CompositeCondition o-- "0..*" Condition : children
CompositeCondition --> Operator

@enduml
